[BE] - feature/card match